crates/astria-conductor/src/sequencer/snapshots/astria_conductor__sequencer__reporting__tests__snapshots-2.snap
---
source: crates/astria-conductor/src/sequencer/reporting.rs
expression: ReportFilteredSequencerBlock(&block)
---
{
  "sequencer_height": 100,
  "rollups": {
    "KioqKioqKioqKioqKioqKioqKioqKioqKioqKioqKio=": 3,
    "RUVFRUVFRUVFRUVFRUVFRUVFRUVFRUVFRUVFRUVFRUU=": 2
  }
}
