crates/astria-conductor/src/sequencer/snapshots/astria_conductor__sequencer__reporting__tests__snapshots.snap
---
source: crates/astria-conductor/src/sequencer/reporting.rs
expression: ReportRollups(block.rollup_transactions())
---
{
  "KioqKioqKioqKioqKioqKioqKioqKioqKioqKioqKio=": 3,
  "RUVFRUVFRUVFRUVFRUVFRUVFRUVFRUVFRUVFRUVFRUU=": 2
}
